--- a/products/ai.html
+++ b/products/ai.html
@@ -8,7 +8,7 @@ header:
   desc: "AI Description"
 sections:
 - name: "AI Product"
-  head_link: "/ai/ai_product/"
+  head_link: "{{ site.baseurl }}/ai/ai_product/"
   head_content: "AI Product Description"
 permalink: "/ai/"
 
