Published By Ram Kumar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   desc: "Find R&D documentation, code samples, API's and more...."
 sections:
 - name: "AI"
-  head_link: "ai/"
+  head_link: "gh-pages/ai/"
   head_content: "AI Description"
 
 ---
