--- a/products/ai.html
+++ b/products/ai.html
@@ -10,6 +10,9 @@ sections:
 - name: "AI Product"
   head_link: "/gh-pages/ai/ai_product/"
   head_content: "AI Product Description"
+- name: "Authors"
+  head_link: "/gh-pages/ai/authors/"
+  head_content: "Authors Description"
 permalink: "/ai/"
 
 ---
