Published By Ram Kumar

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@ sections:
 - name: "AI"
   head_link: "/gh-pages/ai/"
   head_content: "AI Description"
+- name: "Infrastructure"
+  head_link: "/gh-pages/infrastructure/"
+  head_content: "Documentation for Infrastructure"
+- name: "LLM"
+  head_link: "/gh-pages/llm/"
+  head_content: "Documentation for LLM"
+- name: "Langchain"
+  head_link: "/gh-pages/lanchain/"
+  head_content: "Documentation for Langchain"
 
 ---
