--- a/products/ai.html
+++ b/products/ai.html
@@ -7,8 +7,8 @@ header:
   title: "AI"
   desc: "AI Description"
 sections:
-- name: "AI Product"
-  head_link: "/gh-pages/ai/ai_product/"
+- name: "AI Product 1"
+  head_link: "/gh-pages/ai/ai_product_1/"
   head_content: "AI Product Description"
 permalink: "/ai/"
 
