--- a/heirarchy.html
+++ b/heirarchy.html
@@ -12,7 +12,7 @@ tree:
     icon: null
     children:
     - title: "Page 1"
-      link: "/ai/ai_product_1/page_1"
+      link: "/ai/ai_product_1/page_1.html"
       icon: null
       children: []
 - title: "Infrastructure"
@@ -24,7 +24,7 @@ tree:
     icon: null
     children:
     - title: "Argo Installation Local"
-      link: "/infrastructure/argo_workflows/argo_installation_local"
+      link: "/infrastructure/argo_workflows/argo_installation_local.html"
       icon: null
       children: []
 - title: "LLM"
