Published By Ram Kumar

--- a/heirarchy.html
+++ b/heirarchy.html
@@ -7,12 +7,16 @@ tree:
   link: "/ai/"
   icon: null
   children:
-  - title: "AI Product 1"
-    link: "/ai/ai_product_1/"
+  - title: "Author Similarity"
+    link: "/ai/author_similarity/"
     icon: null
     children:
-    - title: "Page 1"
-      link: "/ai/ai_product_1/page_1.html"
+    - title: "Author Similarity Overview"
+      link: "/ai/author_similarity/author_similarity_overview.html"
+      icon: null
+      children: []
+    - title: "Author Similarity Evaluation"
+      link: "/ai/author_similarity/author_similarity_evaluation.html"
       icon: null
       children: []
 - title: "Infrastructure"
