--- a/products/ai.html
+++ b/products/ai.html
@@ -8,9 +8,9 @@ header:
   title: "AI"
   desc: "AI Description"
 sections:
-- name: "AI Product 1"
-  head_link: "/gh-pages/ai/ai_product_1/"
-  head_content: "AI Product Description"
+- name: "Author Similarity"
+  head_link: "/gh-pages/ai/author_similarity/"
+  head_content: "Author Similarity"
 permalink: "/ai/"
 
 ---
